# video-activity-logger

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: data_forklift.yaml  mapping.csv  pilot.yaml  taxonomy.yaml  thresholds.yaml  zones.yaml
outputs/: vid_demo_cam3_events copy.csv  vid_demo_cam3_events.csv
scripts/: _scratch_states_debug.py  batch_run.py  bootstrap_repo.sh  eval_events.py  export_features.py  export_model.py  run_studio.py  testtt.py  train_tcn.py  train_yolo.sh
src/vap/: __init__.py  actions.py  config.py  detect.py  events.py  ingest.py  io.py  pipeline.py  run.py  states.py  taxonomy.py  track.py  zones.py
src/vap/review/: app.py
src/vap/web/: app.py
tests/: test_actions.py  test_states.py  test_taxonomy.py  test_trackers.py
