[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vap"
version = "0.1.0"
description = "Video Activity Logger"
authors = [{name="Smart idima"}]
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]